# poetry

./: pyproject.toml
functions/: backward_string.py  beginning_zeros.py  best_stock.py  between_markers.py  checkio.py  checkio2.py  correct_sentence.py  end_zeros.py  first_word.py  index_power.py  max_digit.py  mult_two.py  number_length.py  remove_all_before.py  replace_first.py  test_backward_string.py  test_beginning_zeros.py  test_best_stock.py  test_between_markers.py  test_checkio.py  test_checkio2.py  test_correct_sentence.py  test_end_zeros.py  test_first_word.py  test_index_power.py  test_max_digit.py  test_mult_two.py  test_number_length.py  test_remove_all_before.py  test_replace_first.py
rp-poetry/: pyproject.toml
