[tool.poetry]
name = "rp-poetry"
version = "0.1.0"
description = ""
authors = ["rikpix1999 <riccardo.porretta99@gmail.com>"]
readme = "README.md"
packages = [{include = "rp_poetry", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
